Ajustes feitos de acordo com o code review do time